Added get_class_name in the SPVM::BlessedObject::Class.
  [New Feature]
    * Added get_class_name in the SPVM::BlessedObject::Class.
    * Added the AUTOLOAD method in the SPVM::BlessedObject::Class to call methods dinamically.

--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 0.9682 2022-01-14
+  [New Feature]
+    * Added get_class_name in the SPVM::BlessedObject::Class.
+    * Added the AUTOLOAD method in the SPVM::BlessedObject::Class to call methods dinamically.
   [Internal Compatible Changes]
     * The runtime field in the SPVM::Builder::CC is renamed to the at_runtime field.
     * The build_runtime method in the SPVM::Builder::CC is renamed to the build_at_runtime method.
