--- a/Changes
+++ b/Changes
@@ -20,6 +20,7 @@
     * The compile method in the SPVM::Builder::Compiler returns the success flag instead of the runtime
     * Added the build_runtime method in the SPVM::Builder::Compiler.
     * Removed the dynamic_lib_files field in the SPVM::Builder.
+    * Initialization is done in the INIT block.
   [Incompatible Changes]
     * Removed the prepare Runtime Native API. This method is called in the build Runtime Native API automatically.
     * Removed the following method in the SPVM::Builder::API class.
