A object is blessed to SPVM::BlessedObject::Class always.
  [Incompatible Changes]
    * A object is blessed to SPVM::BlessedObject::Class always.

The following test yet failed.

{
  my $point = SPVM::Point3D->new(1, 2);

  is($point->x, 1);
  is($point->y, 2);
}

--- a/Changes
+++ b/Changes
@@ -32,6 +32,7 @@
       sub build_shared_lib_dist_native;
     * "use SPVM()" occurs runtime error. "use SPVM(MyClass) or "use SPVM" is valid.
     * SPVM::ExchangeAPI::call_method doesn't need the class name of the first argument.
+    * A object is blessed to SPVM::BlessedObject::Class always.
   [Bug Fix]
     * Fixed the bug that segmentation fault occurs in the following codes.
       use SPVM;
