--- a/Changes
+++ b/Changes
@@ -1,3 +1,11 @@
+0.9683 2022-01-19
+  [Exception Message Improvement]
+    * Exception messages are improved.
+      - "SPVM_BUILD_DIR environment variable must be set to build a $category method at runtime";
+      + "The \"build_dir\" field must be defined to build a $category method at runtime. Perhaps the setting of the SPVM_BUILD_DIR environment variable is forgotten";      [After]
+      - "SPVM_BUILD_DIR environment variable must be set for link";
+      + "The \"build_dir\" field must be defined to build the native module for the $category methods. Perhaps the setting of the SPVM_BUILD_DIR environment variable is forgotten";
+
 0.9682 2022-01-18
   [New Feature]
     * Added get_class_name in the SPVM::BlessedObject::Class.
