--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@
   [New Features]
     * Added the Compiler class.
     * Added the Runtime class.
+    * Added the Env class.
   [Exception Message Improvement]
     * Exception messages are improved.
       - "SPVM_BUILD_DIR environment variable must be set to build a $category method at runtime";
