The following SPVM::xxx functions are deprecated. These functions will be removed in the future. Use the methods in the L<SPVM::ExchangeAPI> directly.
      new_byte_array
      new_byte_array_unsigne
      new_byte_array_len
      new_byte_array_from_bin
      new_byte_array_from_string
      new_short_array
      new_short_array_unsigned
      new_short_array_len
      new_short_array_from_bin
      new_int_array
      new_int_array_unsigned
      new_int_array_len
      new_int_array_from_bin
      new_long_array
      new_long_array_unsigned
      new_long_array_len
      new_long_array_from_bin
      new_float_array
      new_float_array_len
      new_float_array_from_bin
      new_double_array
      new_double_array_len
      new_double_array_from_bin
      new_string
      new_string_from_bin
      new_object_array
      new_object_array_len
      new_any_object_array
      new_mulnum_array
      new_mulnum_array_from_bin
      new_string_array
      new_string_array_len
      get_exception
      set_exception
      get_memory_blocks_count
      call_method
      new_address_object

    How to rewrite the code:

      # Before
      my $int_array = SPVM::new_int_array([1, 2, 3]);

      # After
      my $api = SPVM::api();
      my $int_array = $api->new_int_array([1, 2, 3]);

--- a/Changes
+++ b/Changes
@@ -1,3 +1,57 @@
+0.9684 2022-01-23
+  [New Features]
+    * Added the api function in the SPVM class.
+  [Deprecation]
+
+    The following SPVM::xxx functions are deprecated. These functions will be removed in the future. Use the methods in the L<SPVM::ExchangeAPI> directly.
+
+      new_byte_array
+      new_byte_array_unsigne
+      new_byte_array_len
+      new_byte_array_from_bin
+      new_byte_array_from_string
+      new_short_array
+      new_short_array_unsigned
+      new_short_array_len
+      new_short_array_from_bin
+      new_int_array
+      new_int_array_unsigned
+      new_int_array_len
+      new_int_array_from_bin
+      new_long_array
+      new_long_array_unsigned
+      new_long_array_len
+      new_long_array_from_bin
+      new_float_array
+      new_float_array_len
+      new_float_array_from_bin
+      new_double_array
+      new_double_array_len
+      new_double_array_from_bin
+      new_string
+      new_string_from_bin
+      new_object_array
+      new_object_array_len
+      new_any_object_array
+      new_mulnum_array
+      new_mulnum_array_from_bin
+      new_string_array
+      new_string_array_len
+      get_exception
+      set_exception
+      get_memory_blocks_count
+      call_method
+      new_address_object
+
+    How to rewrite the code:
+      
+      # Before
+      my $int_array = SPVM::new_int_array([1, 2, 3]);
+      
+      # After
+      my $api = SPVM::api();
+      my $int_array = $api->new_int_array([1, 2, 3]);
+    
 0.9683 2022-01-21
   [New Features]
     * Added the Compiler class.
