--- a/Changes
+++ b/Changes
@@ -4,6 +4,7 @@
     * Added the feature that creating SVPM::ExchangeAPI object
     * Added the SPVM::ExchangeAPI::Class class.
     * Added the class method in the SPVM::ExchangeAPI.
+    * The compile method in the Compiler class support undef class name.
   [Document Change]
     * SPVM::Document::ExchangeAPI is rewritten by way to using the SVPM::ExchangeAPI object.
       and its content is moved into the document of SPVM and SPVM::ExchangeAPI.
