--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.9690 2023-02-07
+  [Test Improvement]
+    * Use __func__ in the tests of Native API.
 0.9689 2023-02-01
   [New Features]
     * Support the static method call in Exchange API
