--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 0.9690 2023-02-07
   [Test Improvement]
     * Use __func__ in the tests of Native API.
+  [Exception Message Imprvement]
+    * Exchange APIs contains C function name in the exception stack trace.
 0.9689 2023-02-01
   [New Features]
     * Support the static method call in Exchange API
